--- a/Counter-App/style.css
+++ b/Counter-App/style.css
@@ -1,9 +1,18 @@
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 
 .wrapper{
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: rgb(50, 49, 53);
+    color: ghostwhite;
+    font-family: poppins, sans-serif;
 }
 h2 {
     font-size: 50px;
@@ -18,6 +27,7 @@ button {
     color: white;
     font-weight: bold;
     width: 200px;
+    height: 55px;
     margin-bottom: 5px;
     border-radius: 5px;
 }
@@ -27,5 +37,6 @@ button {
 }
 
 #save-btn {
+    margin: 15px 0;
     background: darkgreen;
 }
