--- a/BlackJack-Game/style.css
+++ b/BlackJack-Game/style.css
@@ -42,6 +42,9 @@ p {
     font-weight: bold;
     transition: all 0.2s ease-in-out;
 }
+
 .btn:hover{
     transform: scale(1.05);
+    background: rgb(41, 40, 44) ;
+    color:goldenrod;
 }
