--- a/Chrome-Extension/style.css
+++ b/Chrome-Extension/style.css
@@ -1,28 +1,49 @@
-*{
-    padding: 10px;
+*{  
+    padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
+html{
+    height: max-content;
+}
+body{
+    padding: 20px;
+    min-width: 350px;
+    height: max-content;
+    max-height: max-content;
+}
+.wrapper{
+    height: max-content;
+}
 button{
     border: none;
-    border-radius: 20px;
+    border-radius: 25px;
     background-color: dodgerblue;
     color: ghostwhite;
     width: 10em;
-    height: 40px;
+    height: 46px;
     box-shadow: rgba(0, 0, 0, 0.150) 0 0px 20px;
     transition: all 0.1s ease-in-out;
 }
 
+#clear-btn{
+    background-color:crimson;
+}
+
+.btn{
+    display: flex;
+    justify-content: space-b;
+}
+
 input{
+    height: 40px;
     border:rgb(190, 190, 190) solid 1px ;
     border-radius: 20px;
     width: 100%;
     margin-bottom: 20px;
     box-shadow: rgba(0, 0, 0, 0.150) 0 0px 20px;
 }
-
 input:focus{
     border:rgb(160, 160, 160) solid 1px ;
     outline: none;
