--- a/Chrome-Extension/style.css
+++ b/Chrome-Extension/style.css
@@ -73,22 +73,46 @@ button:active{
     box-shadow: rgba(0, 0, 0, 0.250) 0 0px 20px;
 }
 
+.scroll{
+    overflow: hidden;
+    border-radius: 10px;
+    margin-top: 40px;
+    border-radius: 10px;
+    line-height: 40px;
+    max-width: 500px;
+    max-height: 500px;
+}
+
+
+ul::-webkit-scrollbar {
+    width: 5px; 
+    
+}
+
+ul::-webkit-scrollbar-track {
+    background:rgba(0, 0, 0, 0.250);
+    /* border-radius: 2px;  */
+}
+
+ul::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.500); 
+}
+
 ul{
     font-size: 1.2em;
     background-color: dodgerblue;
     box-shadow: rgba(0, 0, 0, 0.150) 0 0px 20px;
-    margin-top: 40px;
-    border-radius: 10px;
-    line-height: 25px;
-    width: max-content;
     padding: 20px;
+    overflow-y: scroll;
 }
 
 li{
-    list-style-position: inside;
     color: rgb(0, 65, 129);
     font-size: 1.2em;
+    margin-left: 20px;
 }
+
+
 
 a{
     font-size: 18px;
