--- a/Chrome-Extension/style.css
+++ b/Chrome-Extension/style.css
@@ -78,7 +78,7 @@ button:active{
     border-radius: 10px;
     margin-top: 40px;
     border-radius: 10px;
-    line-height: 40px;
+    line-height: 25px;
     max-width: 500px;
     max-height: 400px;
 }
@@ -110,10 +110,17 @@ ul{
 li{
     color: rgb(0, 65, 129);
     font-size: 1.2em;
-    margin-left: 20px;
+    
+    margin: 0 0 20px 20px;
 }
 
+li:first-child {
+    margin: 0 0 20px 20px;  
+}
 
+li:last-child {
+    margin: 0 0 0 20px;  
+}
 
 a{
     font-size: 18px;
